tests/NormalTests/paczka1/fuzzy1/26796228.err
Error in line 2: g4HnEnsB86 S414 46,8
Error in line 6: wUEK7 S375 52,3
Error in line 29: fIDUlaKM S375 77,1
Error in line 27: dyOTYhwtW S375 49,1
